# firmware

./: .gitignore  Cargo.toml  FKM3.epro  FQBN  README.md  StackmatTimer.cpp  StackmatTimer.h  append_metadata.sh  build.rs  cfg.toml  dev-esp32.sh  dev-esp32c3.sh  docker-compose.yml  partitions.csv  release.sh  stackmat-rfid.ino
.cargo/: config.toml
.github/workflows/: build-arduino.yaml  build-firmware.yaml  rust_ci.yaml
custom-serial/: platformio.ini
custom-serial/src/: main.cpp
dns/: Dockerfile  delegate.lan.zone  entrypoint.sh  fkm.lan.zone  named.conf
dns-config/: delegate.lan.zone  fkm.lan.zone  named.conf
e2e-testing/: Cargo.toml  Dockerfile  unix-utils
e2e-testing/src/: main.rs  structs.rs
ewq/src/: main.cpp
firmware/: .clangd  .clangd-tidy  .gitignore  build.sh  extra_build.py  extra_script.py  install-pio.sh  platformio.ini
firmware/lib/a_buttons/: a_butons.cpp  a_buttons.h
firmware/lib/stackmat/: stackmat.cpp  stackmat.h
firmware/lib/ws_logger/: ws_logger.cpp  ws_logger.h
firmware/src/: buttons.cpp  buttons.hpp  defines.h  globals.cpp  globals.hpp  lcd.cpp  lcd.hpp  main.cpp  main.hpp  pins.h  state.cpp  state.hpp  translations.h  utils.cpp  utils.hpp
firmware/src/radio/: bt.hpp  radio.hpp  utils.cpp  utils.hpp  websocket.cpp  websocket.hpp
macros/: Cargo.toml
macros/src/: lib.rs  pixelart.rs  translations.rs
pcb/: Dockerfile  fkm.kicad_pcb  fkm.kicad_pro  fkm.kicad_sch  fp-lib-table  kikit-config.json  panelize.sh  stackmat.kicad_pcb
pcb/display/: bus_long.kicad_pcb  bus_long.kicad_sch  bus_short.kicad_pcb  bus_short.kicad_sch  display.kicad_pcb  display.kicad_pro  display.kicad_sch  fp-lib-table  kikit-config.json  led_strip.kicad_pcb  led_strip.kicad_pro  led_strip.kicad_sch  panelize.sh
pcb/display/Display.pretty/: TSSOP16.kicad_mod
proj/: .gitignore  .versum  build.sh  extra_build.py  hash.sh  install-pio.sh  platformio.ini
proj/lib/CstmSoftwareSerial/src/: CstmSoftwareSerial.cpp  CstmSoftwareSerial.h
proj/lib/rgb_lcd/: rgb_lcd.cpp
proj/lib/stackmat/: stackmat.cpp  stackmat.h
proj/lib/ws_logger/: b64.hpp  ws_logger.cpp  ws_logger.h
proj/src/: buttons.hpp  globals.hpp  lcd.hpp  main.cpp  state.hpp  translations.h  utils.hpp  version.h  ws.hpp
src/: arc.rs  battery.rs  battery_v3.rs  battery_v4.rs  bluetooth.rs  board.rs  buttons.rs  consts.rs  default_translation.json  lcd.rs  lcd_abstract.rs  lcd_v3.rs  lcd_v4.rs  locale_pl_test.json  main.rs  mdns.rs  panel.html  qa.rs  rfid.rs  scenes.rs  stackmat.rs  state.rs  structs.rs  translations.rs  utils.rs  version.rs  version_fallback.rs  ws.rs
src/utils/: arc.rs  backtrace_store.rs  battery.rs  buttons.rs  error_log.rs  lcd_abstract.rs  lcd_resourcese.rs  logger.rs  mod.rs  rolling_average.rs  shared_i2c.rs  signaled_mutex.rs  stackmat.rs
stackmat-pcb/: .gitignore  18650.kicad_sym  Dockerfile  kikit-config.json  stackmat.kicad_pcb  stackmat.kicad_pro  stackmat.kicad_sch  stackmat_panel.kicad_pcb  stackmat_panel.kicad_pro  sym-lib-table  ~panel.kicad_pcb.lck
stackmat-pcb/18650.pretty/: 18650usbc.kicad_mod
test-web-flash/: manifest.json  test.html
unix-utils/: Cargo.toml
unix-utils/src/: lib.rs  request.rs  response.rs
