[package]
name = "fkm-firmware"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2024"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [ "panic-handler", "println", "custom-pre-backtrace", "custom-halt", "esp32c3" ] }
esp-hal = { version = "1.0.0", features = [ "esp32c3" ] }
esp-println = { version = "0.16.1", features = ["log-04", "esp32c3"] }
log = { version = "0.4.29" }
esp-radio = { version = "0.17.0", features = ["coex", "esp32c3"] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy", "esp-radio"] }
embassy-executor = { version = "0.9.1", features = ["arch-riscv32", "nightly"] }
embassy-net = { version = "0.8.0", features = ["tcp", "udp", "multicast", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }
embassy-time = { version = "0.5.0" }
esp-storage = { version = "0.8.1", features = ["esp32c3"] }
embedded-storage = "0.3.1"
static_cell = { version = "2.1.1", features = ["nightly"] }
heapless = { version = "0.9.2", default-features = false }
esp-alloc = "0.9.0"
esp-hal-wifimanager = { version = "0.2.8", default-features = false, features = ["ap", "ble", "esp32c3", "ota"] }
serde = { version = "1.0.228", features = ["alloc", "derive"], default-features = false }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
adv-shift-registers = "0.2.5"
embedded-hal = "1.0.0"
esp-hal-mdns = "0.1.4"
embedded-io-async = "0.7.0"
macros = { path = "./macros" }
nb = "1.1.0"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
ws-framer = { version = "0.3.1", default-features = false, features = ["alloc", "http", "getrandom02"] }
embedded-hal-async = "1.0.0"
portable-atomic = { version = "1.13.1", default-features = false }
critical-section = "1.2.0"
getrandom = { version = "=0.2.15", features = ["custom"] }
uuid = { version = "=1.12.1", default-features = false, features = ["v4"] }
dyn-smooth = "0.2.0"
esp-hal-ota = { version = "0.4.6", features = ["esp32c3"] }
esp32c3 = { version = "0.31.0" }
anyhow = { version = "1.0.101", default-features = false }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
#embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls.git", default-features = false, features = ["alloc", "embedded-io-adapters", "log"] }
embedded-tls = { git = "https://github.com/filipton/embedded-tls", default-features = false, features = ["alloc", "embedded-io-adapters", "log"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ag-lcd-async = { git = "https://github.com/filipton/ag-lcd-async", features = [] }
esp-hal-mfrc522 = { version = "0.3.3", features = ["embassy-time"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04", "esp32c3"] }
trouble-host = { version = "0.5.1", features = ["scan", "security"] }

[features]
default = ["sleep"]
gen_version = []
bat_dev_lcd = []
release_build = ["sleep"]
e2e = []
qa = []
sleep = []
auto_add = []

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[build-dependencies]
dotenvy = "0.15.7"
