[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = { version = "2.0.96", features = ["extra-traits", "full"] }
